@@ -1,5 +1,5 @@
 application: webkit-queues
-version: 174087 # Bugzilla bug ID of last major change
+version: 174088 # Bugzilla bug ID of last major change
 runtime: python
 api_version: 1
 
